@@ -5,12 +5,9 @@ package io.bitcoinsv.jcl.net.unit.network.streams;
 import io.bitcoinsv.jcl.net.network.PeerAddress;
 import io.bitcoinsv.jcl.net.network.streams.PeerOutputStream;
 import io.bitcoinsv.jcl.net.network.streams.PeerOutputStreamImpl;
-import io.bitcoinsv.jcl.net.network.streams.StreamDataEvent;
 
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.ExecutorService;
 
 /**
  * @author i.fernandez@nchain.com
@@ -24,11 +21,11 @@ class StringNumberOutputStream extends PeerOutputStreamImpl<String, Integer> {
         super(peerAddress, destination);
     }
     @Override
-    public List<StreamDataEvent<Integer>> transform(StreamDataEvent<String> dataEvent) {
+    public List<Integer> transform(String dataEvent) {
         try { Thread.sleep(10);} catch (Exception e) {} // simulate real work
-        String data = dataEvent.getData();
+        String data = dataEvent;
         Integer result = Integer.valueOf(data.substring(1, data.length() - 1));
-        System.out.println(">> StringNumberOutputStream ::Receiving " + dataEvent.getData() + ", sending " + result);
-        return Arrays.asList(new StreamDataEvent<>(result));
+        System.out.println(">> StringNumberOutputStream ::Receiving " + dataEvent + ", sending " + result);
+        return List.of(result);
     }
 }
